--- a/ICoder/Ch5_blog/blog/templates/home.html
+++ b/ICoder/Ch5_blog/blog/templates/home.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1> <a href="{% url 'home' %}"> Django blog </a></h1>
+        <!-- <h1>  Django blog </h1> -->
     </header>
     <div>
         {% block content %}
